Add: DEU/BDE animation system and scene refactor
Introduces DEUAnimationController, StaticSceneController, and a full animation registry backed by animations.yml. Adds AnimationBrowserMenu, DEUBDEMenu, and DeuGroupBrowserMenu for in-game animation browsing. Removes legacy SceneManager, AvatarDisplay, HudDisplayGroup, and GentleDriftCameraController in favour of the new controller model. Renames SoundType → SwordSoundType to avoid collision with the Bukkit API. Adds packet-level MovementListener for cutscene input handling.